This refactoring adopts the BCE architecture, decoupling the UI, logic, and data into separate layers.